--- a/Team_Purple/app/build.gradle
+++ b/Team_Purple/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
 }
